# mkdocs-social-buttons-plugin

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  pyproject.toml  setup.py
mkdocs_social_buttons_plugin/: plugin.py  utils.py
mkdocs_social_buttons_plugin/buttons/: __init__.py  base.py  linked_in.py  twitter.py
tests/: test_base_button.py  test_linkedin.py  test_twitter.py  test_utils.py
