[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-social-buttons-plugin"
version = "0.1"
description = "Mkdocs plugin that generates inline social sharing buttons."
keywords = "mkdocs social plugin"
author = "Richard Forshaw"
author_email = "richard@forshaw.org"
url = "https://github.com/richardforshaw/mkdocs-social-buttons-plugin"
# include_package_data=True,
license = "MIT"
python_requires = ">=3.7"
classifiers= [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
install_requires=[
    "mkdocs>1.4",
]

[mkdocs.plugins]
social-buttons = "mkdocs_social_buttons_plugin.plugin:SocialButtonsPlugin"

# entry_points= {
#     "mkdocs.plugins": [
#         "social-buttons = mkdocs_social_buttons_plugin.plugin:SocialButtonsPlugin"
#     ]
# }
