[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-social-buttons-plugin"
version = "0.2"
description = "Mkdocs plugin that generates inline social sharing buttons."
keywords = ["mkdocs", "social", "sharing", "plugin"]
# include_package_data=True,
requires-python = ">=3.7"
classifiers= [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    "mkdocs>1.4",
]

[project.entry-points."mkdocs.plugins"]
social-buttons = "mkdocs_social_buttons_plugin.plugin:SocialButtonsPlugin"
